Fix header on safari

--- a/ui/css/less/global.less
+++ b/ui/css/less/global.less
@@ -62,7 +62,12 @@
 }
 
 @media all and (min-width: 768px) {
-  .navbar-default.sidebar {
-    display: none;
+  .navbar-default {
+    .navbar-header {
+      width: 450px;
+    }
+    .sidebar {
+      display: none;
+    }
   }
 }
